kustomize/base/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-test
  namespace: devops
spec:
   replicas: 1
   selector:
     matchLabels:
       app: ci-test
   template:
     metadata:
       labels:
         app: ci-test
     spec:
       imagePullSecrets:
         - name: regsecret
       containers:
       - name: ci-test
         image: docker.dm-ai.cn/devops/ci-test:769f22c4d0cd39819484dc90efddd2e3c83a4190
         ports:
         - containerPort: 80
