kustomize/base/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ci-test
  namespace: devops
spec:
  ports:
  - name: ci-test
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ci-test
  type: ClusterIP
